lang/tests/collaboration/ui/fail/01-no-signers.rs
use liquid_lang as liquid;

#[liquid::collaboration]
mod noop {
    use super::*;

    #[liquid(contract)]
    pub struct Noop {
        addr: address
    }
}

fn main() {}